--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^3.3.0"
+    "react": "*",
+    "react-dom": "*",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
